--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,108 +8,174 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-13 11:01+0100\n"
-"PO-Revision-Date: 2006-07-29 00:09+0800\n"
-"Last-Translator: Cosmo Chene <cosmolax@ubuntu.org.tw>\n"
+"POT-Creation-Date: 2008-04-26 04:13+0800\n"
+"PO-Revision-Date: 2008-04-26 04:13+0800\n"
+"Last-Translator: 洪任諭 <pcman.tw@gmail.com>\n"
 "Language-Team: Tradictional Chinese <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../src/callbacks.c:60
+#: ../src/callbacks.c:70
 msgid "Really kill the task?"
-msgstr ""
+msgstr "確定強行中止這個程式？"
 
-#: ../src/callbacks.c:61
+#: ../src/callbacks.c:74
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "確定終止這個程式？"
 
-#: ../src/functions.c:124
+#: ../src/functions.c:143
 #, c-format
-msgid "%d kB of %d kB used"
-msgstr ""
+msgid "Memory: %d MB of %d MB used"
+msgstr "記憶體：%2$d kB 中的 %1$d kB 已使用"
 
-#: ../src/functions.c:129
+#: ../src/functions.c:149
 #, c-format
-msgid "%0.0f %%"
-msgstr ""
+msgid "CPU usage: %0.0f %%"
+msgstr "CPU 用量：%0.0f %%"
 
-#: ../src/interface.c:45 ../src/interface.c:272
-msgid "xfce4-taskmanager"
-msgstr "xfce4-工作管理員"
+#: ../src/interface.c:50
+msgid "Task Manager"
+msgstr "工作管理員"
 
-#: ../src/interface.c:59
+#: ../src/interface.c:64
 msgid "cpu usage"
-msgstr ""
+msgstr "CPU 用量"
 
-#: ../src/interface.c:67
+#: ../src/interface.c:72
 msgid "memory usage"
-msgstr ""
+msgstr "記憶體用量"
 
-#: ../src/interface.c:99
+#: ../src/interface.c:104
 msgid "more details"
 msgstr "更多細節"
 
-#: ../src/interface.c:125
+#: ../src/interface.c:131
 msgid "Command"
 msgstr "命令"
 
-#: ../src/interface.c:131
-msgid "PID"
-msgstr "PID"
-
 #: ../src/interface.c:137
-msgid "PPID"
-msgstr "PPID"
-
-#: ../src/interface.c:143
-msgid "State"
-msgstr "狀態"
-
-#: ../src/interface.c:149
-msgid "VM-Size"
-msgstr "虛擬記憶體容量"
-
-#: ../src/interface.c:155
-msgid "RSS"
-msgstr "RSS"
-
-#: ../src/interface.c:161
 msgid "User"
 msgstr "使用者"
 
-#: ../src/interface.c:167
+#: ../src/interface.c:143
 msgid "CPU%"
 msgstr "CPU%"
 
-#: ../src/interface.c:183
+#: ../src/interface.c:149
+msgid "RSS"
+msgstr "RSS"
+
+#: ../src/interface.c:155
+msgid "VM-Size"
+msgstr "虛擬記憶體容量"
+
+#: ../src/interface.c:161
+msgid "PID"
+msgstr "PID"
+
+#: ../src/interface.c:167
+msgid "State"
+msgstr "狀態"
+
+#: ../src/interface.c:173
+msgid "Prio"
+msgstr "優先權"
+
+#: ../src/interface.c:179
+msgid "PPID"
+msgstr "PPID"
+
+#: ../src/interface.c:195
 msgid "Stop"
 msgstr "停止"
 
-#: ../src/interface.c:188
+#: ../src/interface.c:200
 msgid "Continue"
 msgstr "繼續"
 
-#: ../src/interface.c:193
+#: ../src/interface.c:205
 msgid "Term"
-msgstr "Term"
+msgstr "終止"
 
-#: ../src/interface.c:198
+#: ../src/interface.c:210
 msgid "Kill"
 msgstr "強行中止"
 
-#: ../src/interface.c:230
+#: ../src/interface.c:215
+msgid "Priority"
+msgstr "優先權"
+
+#: ../src/interface.c:228
+msgid "  -10"
+msgstr ""
+
+#: ../src/interface.c:233
+msgid "  -5"
+msgstr ""
+
+#: ../src/interface.c:238
+msgid "    0"
+msgstr ""
+
+#: ../src/interface.c:243
+msgid "   5"
+msgstr ""
+
+#: ../src/interface.c:248
+msgid "   10"
+msgstr ""
+
+#: ../src/interface.c:280
 msgid "Show user tasks"
 msgstr "顯示使用者工作"
 
-#: ../src/interface.c:235
+#: ../src/interface.c:285
 msgid "Show root tasks"
 msgstr "顯示 root 工作"
 
-#: ../src/interface.c:240
+#: ../src/interface.c:290
 msgid "Show other tasks"
 msgstr "顯示其他工作"
 
-#: ../src/interface.c:245
+#: ../src/interface.c:295
 msgid "Show memory used by cache as free"
+msgstr "將用於快取的記憶體視為未使用"
+
+#: ../src/interface.c:317
+msgid ""
+"LXTask is derived from Xfce4 Task Manager by:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask 是由 Xfce4 Task Manager 改作，其原作者為:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
+
+#. TRANSLATORS: Replace mw string with your names, one name per line.
+#: ../src/interface.c:322
+msgid "translator-credits"
+msgstr "洪任諭 <pcman.tw@gmail.com>"
+
+#: ../src/interface.c:330
+msgid "LXTask"
+msgstr "LXTask"
+
+#. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
+#: ../src/interface.c:332
+msgid "Copyright (C) 2008 LXDE team"
+msgstr "版權所有 (C) 2008 LXDE 團隊"
+
+#: ../src/interface.c:333
+msgid "Lightweight task manager for LXDE project"
+msgstr "LXDE 專案的輕量級工作管理員"
+
+#: ../src/utils.c:43
+msgid "Error"
+msgstr "錯誤"
+
+#: ../src/utils.c:56
+msgid "Confirm"
+msgstr "確認"
+
+#~ msgid "%0.0f %%"
+#~ msgstr "%0.0f %%"
+
