--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-04-28 23:54+0800\n"
+"POT-Creation-Date: 2008-04-29 02:47+0800\n"
 "PO-Revision-Date: 2008-04-26 04:13+0800\n"
 "Last-Translator: 洪任諭 <pcman.tw@gmail.com>\n"
 "Language-Team: Tradictional Chinese <zh-l10n@linux.org.tw>\n"
@@ -16,20 +16,35 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../src/callbacks.c:62
+#: ../src/xfce-taskmanager-linux.c:303
+#, c-format
+msgid ""
+"Couldn't send signal %d to the task with ID %d\n"
+"\n"
+"%s"
+msgstr "無法發送訊息 %d 給工作 %d\n"
+"\n"
+"%s"
+
+#: ../src/xfce-taskmanager-linux.c:316
+#, c-format
+msgid "Couldn't set priority %d to the task with ID %d"
+msgstr "無法變更工作 %2$d 的優先權到 %1$d"
+
+#: ../src/callbacks.c:56
 msgid "Really kill the task?"
 msgstr "確定強行中止這個程式？"
 
-#: ../src/callbacks.c:66
+#: ../src/callbacks.c:60
 msgid "Really terminate the task?"
 msgstr "確定終止這個程式？"
 
-#: ../src/functions.c:143
+#: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
 msgstr "記憶體：%2$d MB 中的 %1$d MB 已使用"
 
-#: ../src/functions.c:149
+#: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
 msgstr "CPU 用量：%0.0f %%"
