--- a/po/de.po
+++ b/po/de.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-04-29 02:35+0800\n"
-"PO-Revision-Date: 2007-12-19 00:10+0000\n"
-"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
+"PO-Revision-Date: 2008-05-11 00:37+0200\n"
+"Last-Translator: Mario Blättermann <mario.blaettermann@t-online.de>\n"
 "Language-Team: German <xfce4-dev@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -27,31 +27,30 @@ msgid "Really terminate the task?"
 msgstr "Prozess wirklich beenden?"
 
 #: ../src/functions.c:142
-#, fuzzy, c-format
+#, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "%d kB of %d kB benutzt"
+msgstr "Speicher: %d MB von %d MB benutzt"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "CPU-Auslastung: %0.0f %%"
 
 #: ../src/interface.c:53
-#, fuzzy
 msgid "Task Manager"
-msgstr "xfce4-taskmanager"
+msgstr "LXDE-Taskmanager"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Datei"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_Ansicht"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "_Hilfe"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
@@ -95,7 +94,7 @@ msgstr "Status"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Prio"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -119,27 +118,27 @@ msgstr "Kill"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Priorität"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
@@ -162,32 +161,37 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask entstand auf der Basis des Xfce4-Taskmanagers von:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
 msgstr ""
+"Fabian Nowak <timystery@arcor.de>, 2007\n"
+"Mario Blättermann <mario.blaettermann@t-online.de>, 2008"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
+
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Leichtgewichtiger Taskmanager des LXDE-Projekts"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Fehler"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Bestätigen"
 
 #~ msgid "%0.0f %%"
 #~ msgstr "%0.0f %%"
