Updated German translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-15	Mario Blättermann <mario.blaettermann@t-online.de>
+
+	* de.po: Updated German translation
+
 2008-04-24	Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po, LINGUAS: Added Greek translation by Evaggelos Balaskas
