--- a/po/de.po
+++ b/po/de.po
@@ -10,13 +10,29 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-04-29 02:35+0800\n"
-"PO-Revision-Date: 2008-05-17 22:52+0200\n"
+"POT-Creation-Date: 2008-11-15 22:30+0100\n"
+"PO-Revision-Date: 2008-11-15 22:35+0200\n"
 "Last-Translator: Mario Blättermann <mario.blaettermann@t-online.de>\n"
-"Language-Team: German <xfce4-dev@xfce.org>\n"
+"Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: ../src/xfce-taskmanager-linux.c:303
+#, c-format
+msgid ""
+"Couldn't send signal %d to the task with ID %d\n"
+"\n"
+"%s"
+msgstr ""
+"Signal %d konnte nicht an den Prozess mit der Kennung %d gesendet werden.\n"
+"\n"
+"%s"
+
+#: ../src/xfce-taskmanager-linux.c:317
+#, c-format
+msgid "Couldn't set priority %d to the task with ID %d"
+msgstr "Priorität %d konnte nicht für den Prozess mit der Kennung %d gesetzt werden"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -177,7 +193,6 @@ msgstr ""
 msgid "LXTask"
 msgstr "LXTask"
 
-
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
@@ -194,6 +209,3 @@ msgstr "Fehler"
 #: ../src/utils.c:56
 msgid "Confirm"
 msgstr "Bestätigen"
-
-#~ msgid "%0.0f %%"
-#~ msgstr "%0.0f %%"
