--- a/po/pl.po
+++ b/po/pl.po
@@ -1,20 +1,23 @@
+# translation of pl.po to Polish
 # Polish translations for xfce4-taskmanager package.
 # Copyright (C) 2005-2006 Johannes Zellner.
 # This file is distributed under the same license as
 #   the xfce4-taskmanager package.
-# Piotr Maliński <admin@rk.edu.pl>, 2006.
 #
+# Piotr Maliński <admin@rk.edu.pl>, 2006.
+# Grzegorz Gibas <amigib@gmail.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
+"Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-04-29 02:35+0800\n"
-"PO-Revision-Date: 2006-04-08 13:19+0900\n"
-"Last-Translator: Piotr Maliński <admin@rk.edu.pl>\n"
-"Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2009-01-10 21:28+0100\n"
+"Last-Translator: Grzegorz Gibas <amigib@gmail.com>\n"
+"Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -32,24 +35,23 @@ msgstr "używane %d kB z %d kB"
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Zużycie procesora: %0.z %%"
 
 #: ../src/interface.c:53
-#, fuzzy
 msgid "Task Manager"
-msgstr "xfce4-taskmanager"
+msgstr "Menedżer Procesów"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Plik"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_Widok"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "_Pomoc"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
@@ -93,7 +95,7 @@ msgstr "Stan"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Prio"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -117,27 +119,27 @@ msgstr "Zabij"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Priorytet"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
@@ -160,32 +162,32 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask wywodzi się z Xfce4 Task Manager  stworzony przez:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr ""
+msgstr "Grzegorz Gibas (amigib@gmail.com)"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Prawa zastrzeżone (C) 2008 Ekipa LXDE"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Lekki menedżer procesów dla projektu LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Błąd"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Potwierdź"
 
-#~ msgid "%0.0f %%"
-#~ msgstr "%0.0f %%"
