--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-26	Ming-Ting Wei <medicalwei@gmail.com>
+
+	* ar.po: Added Arabic translation
+
 2008-11-15	Mario Blättermann <mario.blaettermann@t-online.de>
 
 	* de.po: Updated German translation
