--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -4,6 +4,7 @@
 	* lxtask.pot: Added.
 	* LINGUAS: Added with all available languages.
 	* .po: Updated all message catalogs against the new lxtask.pot.
+	* pt.po: Renamed from pt_PT as there is no pt_PT.
 
 2009-01-26	Ming-Ting Wei <medicalwei@gmail.com>
 
