--- a/po/ca.po
+++ b/po/ca.po
@@ -2,13 +2,13 @@
 # Copyright (C) 2005, 2006 Johannes Zellner
 # This file is distributed under the same license as the xfce4-taskmanager package.
 # Pau Ruŀlan Ferragut <paurullan@bulma.net>, 2006.
-# 
-# 
+#
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-26 20:39-0500\n"
+"POT-Creation-Date: 2009-02-09 02:51+0100\n"
 "PO-Revision-Date: 2006-09-18 16:28+0200\n"
 "Last-Translator: Pau Ruŀlan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: Catalan\n"
