Added Japanese translation for LXTerminal, LXMusic, LXPanel and LXTask.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-10 Ming-Ting Wei <medicalwei@gmail.com>
+
+	* ja.po: Updated Japanese translation
+
 2009-01-26 Og Maciel <ogmaciel@gnome.org>
 
 	* POTFILES.in: Updated. Fixes SF.net #2376792.
