--- a/po/sk.po
+++ b/po/sk.po
@@ -1,19 +1,18 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Slovak translation of lxtask
+# Copyright (C) 2006 lxde team
+# This file is distributed under the same license as the lxtask package.
+# Ivan MasÃ¡r <helix84@centrum.sk>, 2009.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-02-09 02:51+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-02-13 15:47+0100\n"
+"Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
+"Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
@@ -23,178 +22,184 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Nebolo možné poslať signál %d úlohe s ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Nepodarilo sa nastaviť prioritu %d úlohy s ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Skutočne zabiť úlohu?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Skutočne ukončiť úlohu?"
 
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Pamäť: využitých %d MB z %d MB"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Využitie CPU: %0.0f %%"
 
 #: ../src/interface.c:53
 msgid "Task Manager"
-msgstr ""
+msgstr "Správca úloh"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Súbor"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_Zobraziť"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "_Pomocník"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
-msgstr ""
+msgstr "využitie cpu"
 
 #: ../src/interface.c:112
 msgid "memory usage"
-msgstr ""
+msgstr "využitie pamäte"
 
 #: ../src/interface.c:140
 msgid "more details"
-msgstr ""
+msgstr "podrobnosti"
 
 #: ../src/interface.c:166
 msgid "Command"
-msgstr ""
+msgstr "Príkaz"
 
 #: ../src/interface.c:172
 msgid "User"
-msgstr ""
+msgstr "Používateľ"
 
 #: ../src/interface.c:178
 msgid "CPU%"
-msgstr ""
+msgstr "CPU%"
 
 #: ../src/interface.c:184
 msgid "RSS"
-msgstr ""
+msgstr "RSS"
 
 #: ../src/interface.c:190
 msgid "VM-Size"
-msgstr ""
+msgstr "Veľkosť-VM"
 
 #: ../src/interface.c:196
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
 #: ../src/interface.c:202
 msgid "State"
-msgstr ""
+msgstr "Stav"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Prio"
 
 #: ../src/interface.c:214
 msgid "PPID"
-msgstr ""
+msgstr "PPID"
 
 #: ../src/interface.c:230
 msgid "Stop"
-msgstr ""
+msgstr "Zastaviť"
 
 #: ../src/interface.c:235
 msgid "Continue"
-msgstr ""
+msgstr "Pokračovať"
 
 #: ../src/interface.c:240
 msgid "Term"
-msgstr ""
+msgstr "Ukončiť"
 
 #: ../src/interface.c:245
 msgid "Kill"
-msgstr ""
+msgstr "Zabiť"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Priorita"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
-msgstr ""
+msgstr "Zobraziť úlohy používateľa"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr ""
+msgstr "Zobraziť úlohy používateľa root"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
-msgstr ""
+msgstr "Zobraziť ostatné úlohy"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "Zobraziť pamäť využitú vyrovnávacou pamäťou ako voľnú"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask je založený na Správcovi úloh Xfce4. Autor:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr ""
+msgstr "Ivan Masár <helix84@centrum.sk>"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008, tím LXDE"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Odľahčený správca úloh pre projekt LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Chyba"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Potvrdiť"
+
