--- a/po/pl.po
+++ b/po/pl.po
@@ -6,17 +6,19 @@
 #
 # Piotr Maliński <admin@rk.edu.pl>, 2006.
 # Grzegorz Gibas <amigib@gmail.com>, 2009.
+# Artur Kruszewski <mazdac@gmail.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-02-09 02:51+0100\n"
-"PO-Revision-Date: 2009-01-10 21:28+0100\n"
-"Last-Translator: Grzegorz Gibas <amigib@gmail.com>\n"
+"PO-Revision-Date: 2009-02-19 18:57-0000\n"
+"Last-Translator: Artur Kruszewski <mazdac@gmail.com>\n"
 "Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: KBabel 1.11.4\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
@@ -26,11 +28,14 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Nie można wysłać sygnału %d do zadania z ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Nie można ustawić priorytetu %d zadaniu  z ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -41,14 +46,14 @@ msgid "Really terminate the task?"
 msgstr "Na pewno zakończyć zadanie (przez SIGTERM)?"
 
 #: ../src/functions.c:142
-#, fuzzy, c-format
+#, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "używane %d kB z %d kB"
+msgstr "Pamięć w użyciu %d MB z %d MB"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr "Zużycie procesora: %0.z %%"
+msgstr "Użycie procesora: %0.z %%"
 
 #: ../src/interface.c:53
 msgid "Task Manager"
@@ -203,3 +208,4 @@ msgstr "Błąd"
 #: ../src/utils.c:56
 msgid "Confirm"
 msgstr "Potwierdź"
+
