--- a/po/uk.po
+++ b/po/uk.po
@@ -1,20 +1,15 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-02-09 02:51+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2008-08-14 02:35+0800\n"
+"PO-Revision-Date: 2009-03-04 22:58+0100\n"
+"Last-Translator: Y P <yupadmin@gmail.com>\n"
+"Language-Team: Ukrainian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Pootle 1.1.0\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -23,178 +18,183 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Не можу послати сигнал %d до процесу з ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Не можу встановити пріоритет %d для процесу з ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Дійсно вбити процес?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Дійсно перервати процес?"
 
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Пам’ять: %d MB з %d MB використано"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Використання CPU: %0.0f %%"
 
 #: ../src/interface.c:53
 msgid "Task Manager"
-msgstr ""
+msgstr "Диспетчер задач"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Файл"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_Вигляд"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "_Допомога"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
-msgstr ""
+msgstr "використання CPU"
 
 #: ../src/interface.c:112
 msgid "memory usage"
-msgstr ""
+msgstr "використання пам’яті"
 
 #: ../src/interface.c:140
 msgid "more details"
-msgstr ""
+msgstr "детальніше"
 
 #: ../src/interface.c:166
 msgid "Command"
-msgstr ""
+msgstr "Команда"
 
 #: ../src/interface.c:172
 msgid "User"
-msgstr ""
+msgstr "Користувач"
 
 #: ../src/interface.c:178
 msgid "CPU%"
-msgstr ""
+msgstr "CPU%"
 
 #: ../src/interface.c:184
 msgid "RSS"
-msgstr ""
+msgstr "RSS"
 
 #: ../src/interface.c:190
 msgid "VM-Size"
-msgstr ""
+msgstr "Розмір віртуальної пам’яті"
 
 #: ../src/interface.c:196
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
 #: ../src/interface.c:202
 msgid "State"
-msgstr ""
+msgstr "Стан"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Пріоритет"
 
 #: ../src/interface.c:214
 msgid "PPID"
-msgstr ""
+msgstr "PPID"
 
 #: ../src/interface.c:230
 msgid "Stop"
-msgstr ""
+msgstr "Зупинити"
 
 #: ../src/interface.c:235
 msgid "Continue"
-msgstr ""
+msgstr "Продовжити"
 
 #: ../src/interface.c:240
 msgid "Term"
-msgstr ""
+msgstr "Завершити"
 
 #: ../src/interface.c:245
 msgid "Kill"
-msgstr ""
+msgstr "Вбити"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Пріоритет"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
-msgstr ""
+msgstr "Показати процеси користувача"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr ""
+msgstr "Показати процеси суперкористувача"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
-msgstr ""
+msgstr "Показати інші процеси"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "Показати пам’ять, використану під кеш, як вільну пам’ять"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask походить з Xfce4 Task Manager, створений:\n"
+"* Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr ""
+msgstr "Yarema aka Knedlyk <yupadmin@gmail.com>"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Легкий менеджер задач для проекту LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Помилка"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Підтвердити"
