--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,17 +1,18 @@
-# Brazilian Portuguese translations for xfce4-taskmanager package.
+# Brazilian Portuguese translations for lxtask package.
 # Copyright (C) 2005 Johannes Zellner.
-# This file is distributed under the same license as the
-#   xfce4-taskmanager package.
+# This file is distributed under the same license as the xfce4-taskmanager package.
 # Johannes Zellner <xfce4-taskmanager@nebulon.de>, 2005.
 # Adriano Winter Bess <adriano@xfce.org>, 2006.
 # Pablo Galletti Vieira <pbgozer@gmail.com>, 2007.
+# Henrique P. Machado <zehrique@gmail.com>, 2009.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-02-09 02:51+0100\n"
-"PO-Revision-Date: 2007-08-30 17:00-0300\n"
-"Last-Translator: Pablo Galletti Vieira <pbgozer@gmail.com>\n"
+"PO-Revision-Date: 2007-03-11 19:41-0300\n"
+"Last-Translator: Henrique P. Machado <zehrique@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -24,58 +25,60 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Não foi possível enviar o sinal %d para a tarefa com a ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Não foi possível atribuir a prioridade %d para a tarefa com a ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr "Realmente matar a tarefa?"
+msgstr "Matar realmente a tarefa?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr "Realmente terminar a tarefa?"
+msgstr "Terminar realmente a tarefa?"
 
 #: ../src/functions.c:142
-#, fuzzy, c-format
+#, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "%d kB de %d kB usado"
+msgstr "Memória: %d MB de %d MB usada"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Uso de CPU: %0.0f %%"
 
 #: ../src/interface.c:53
-#, fuzzy
 msgid "Task Manager"
-msgstr "xfce4-taskmanager"
+msgstr "Gerenciador de Tarefas"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Arquivo"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_Ver"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "Aj_uda"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
-msgstr "uso de cpu"
+msgstr "Uso de CPU"
 
 #: ../src/interface.c:112
 msgid "memory usage"
-msgstr "uso de memória"
+msgstr "Uso de memória"
 
 #: ../src/interface.c:140
 msgid "more details"
-msgstr "mais detalhes"
+msgstr "Mais detalhes"
 
 #: ../src/interface.c:166
 msgid "Command"
@@ -83,7 +86,7 @@ msgstr "Comando"
 
 #: ../src/interface.c:172
 msgid "User"
-msgstr "Usuário"
+msgstr "Usuario"
 
 #: ../src/interface.c:178
 msgid "CPU%"
@@ -95,7 +98,7 @@ msgstr "RSS"
 
 #: ../src/interface.c:190
 msgid "VM-Size"
-msgstr "Tamanho da Memória Virtual"
+msgstr "Tamanho da memória virtual"
 
 #: ../src/interface.c:196
 msgid "PID"
@@ -107,7 +110,7 @@ msgstr "Estado"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Prioridade"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -131,35 +134,35 @@ msgstr "Matar"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Prioridade"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
-msgstr "Mostrar tarefas do usuário"
+msgstr "Mostrar tarefas do usuario"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr "Mostrar tarefas do root"
+msgstr "Mostrar tarefas do superusuario"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
@@ -174,32 +177,37 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask é derivado do Gerenciador de Tarefas do Xfce4 por:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
 msgstr ""
+"Adriano Winter Bess <adriano@xfce.org>\n"
+"Pablo Galletti Vieira <pbgozer@gmail.com>\n"
+"Henrique P. Machado <zehrique@gmail.com>"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008 O Time do LXDE"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Gerenciador de tarefas leve para o projeto LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Erro"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Confirmar"
 
 #~ msgid "%0.0f %%"
 #~ msgstr "%0.0f %%"
